# arrow-mssql

./: .gitignore  README.md  incineracao.parquet  pyproject.toml
arrow_mssql/: __init__.py  connector.py  datatypes.py  export.py  iport.py  schemas.py  utils.py
arrow_mssql/input/: datatypes.py  schema.py
arrow_mssql/output/: datatypes.py  schemas.py
tests/: __init__.py
