[tool.poetry]
name = "arrow-mssql"
version = "0.0.83"
description = "Arrow-mssql exporta tabela ou consulta para .parquet ou .csv, e também faz a leitura de .parquet para tabela do sql server"
authors = ["Marcus Holanda <mvsh777@hotmail.com>"]
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Natural Language :: Portuguese (Brazilian)",
    "Programming Language :: PL/SQL",
    "Programming Language :: Python :: 3.11"
]

[tool.poetry.urls]
"Codigo" = "https://github.com/Marcus-Holanda777/arrow-mssql"

[tool.poetry.dependencies]
python = "^3.11"
pyodbc = "^5.1.0"
pyarrow = "^16.0.0"
sqlglot = "^23.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"